--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/dataMiner.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.weka.jar=C:\\Program Files\\Weka-3-8\\weka.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\ALEJO SALGADO\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\ALEJO SALGADO\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.weka.jar}
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
